plugins {
    id 'java-library'
    id 'io.spring.dependency-management' version '1.1.3'
}

group = 'com.vmware.gemfire'
version = '1.0-SNAPSHOT'

java {
    sourceCompatibility = '17'
    targetCompatibility = '17'
}

repositories {
    mavenCentral()
    maven {
        credentials {
            username "$gemfireRepoUsername"
            password "$gemfireRepoPassword"
        }
        url = uri("https://commercial-repo.pivotal.io/data3/gemfire-release-repo/gemfire")
    }
}

dependencies {
    api(platform("org.springframework.integration:spring-integration-bom:6.0.7"))
    api 'org.springframework.integration:spring-integration-core'
    api('com.vmware.gemfire:spring-data-3.0-gemfire-10.0:1.0.0') {
        exclude group: 'org.springframework'
        exclude module: 'shiro-event'
        exclude module: 'shiro-lang'
        exclude module: 'shiro-crypto-hash'
        exclude module: 'shiro-crypto-cipher'
        exclude module: 'shiro-config-ogdl'
        exclude module: 'shiro-config-core'
        exclude module: 'shiro-cache'
        exclude module: 'commons-logging'
    }
    api "commons-io:commons-io:2.13.0"
    compileOnly ('com.vmware.gemfire:gemfire-core:10.0.1'){
        exclude module: "commons-logging"
    }

    testImplementation(platform("org.junit:junit-bom:5.10.0"))
    testImplementation 'org.springframework.integration:spring-integration-test-support'

    testImplementation ('com.vmware.gemfire:gemfire-core:10.0.1'){
        exclude module: "commons-logging"
    }
    testImplementation ('com.vmware.gemfire:gemfire-cq:10.0.1'){
        exclude module: "commons-logging"
    }
    testImplementation 'junit:junit:4.13.2'
    testImplementation 'org.assertj:assertj-core:3.24.2'
    testImplementation 'org.springframework:spring-test:6.0.7'
    testImplementation 'org.mockito:mockito-core:5.4.0'
    testImplementation 'org.junit.jupiter:junit-jupiter-api:5.10.0'
    testImplementation 'org.junit.jupiter:junit-jupiter-params:5.10.0'
    testImplementation 'org.junit.vintage:junit-vintage-engine:5.10.0'
    testImplementation 'ch.qos.logback:logback-classic:1.4.11'
    testImplementation 'org.slf4j:log4j-over-slf4j:2.0.9'
    testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.10.0'
}

tasks.withType(JavaForkOptions) {
    jvmArgs '--add-opens', 'jdk.management/com.sun.management.internal=ALL-UNNAMED'
}

test {
    useJUnitPlatform()
}
